--- a/MLNETProjects/MLNETProjects/MLNETProjects.csproj
+++ b/MLNETProjects/MLNETProjects/MLNETProjects.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="TensorFlow.NET" Version="0.20.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ForecastingAI\" />
+  </ItemGroup>
+
 </Project>
